test/log/mac/vwmacc_vv_i32.txt
vwmacc_vv_i32.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwmacc_vv_i32.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwmacc_vv_i32.c:14:40: warning: backslash and newline separated by space
   14 |  #define data_init(a, b, n, threshold) \
      |                                         
vwmacc_vv_i32.c:15:35: warning: backslash and newline separated by space
   15 |      for(int i = 0; i < n; i++) { \
      |                                    
vwmacc_vv_i32.c:16:40: warning: backslash and newline separated by space
   16 |              a[i] = random(threshold); \
      |                                         
vwmacc_vv_i32.c:17:27: warning: backslash and newline separated by space
   17 |              b[i] = a[i]; \
      |                            
vwmacc_vv_i32.c:23:6: warning: no previous prototype for 'vwmacc_vv_i32_golden' [-Wmissing-prototypes]
   23 | void vwmacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vwmacc_vv_i32.c: In function 'main':
vwmacc_vv_i32.c:16:15: error: subscripted value is neither array nor pointer nor vector
   16 |              a[i] = random(threshold); \
      |               ^
vwmacc_vv_i32.c:43:5: note: in expansion of macro 'data_init'
   43 |     data_init(a, exp_a, 8*2, 0xffffffffffffffff);
      |     ^~~~~~~~~
vwmacc_vv_i32.c:17:22: error: subscripted value is neither array nor pointer nor vector
   17 |              b[i] = a[i]; \
      |                      ^
vwmacc_vv_i32.c:43:5: note: in expansion of macro 'data_init'
   43 |     data_init(a, exp_a, 8*2, 0xffffffffffffffff);
      |     ^~~~~~~~~
vwmacc_vv_i32.c:46:38: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   46 |     data_init_scalar(accum, exp_accum);
      |                                      ^
vwmacc_vv_i32.c:12: note: macro "data_init_scalar" defined here
   12 |  #define data_init_scalar(a, b, threshold) \
      | 
vwmacc_vv_i32.c:46:5: error: 'data_init_scalar' undeclared (first use in this function)
   46 |     data_init_scalar(accum, exp_accum);
      |     ^~~~~~~~~~~~~~~~
vwmacc_vv_i32.c:46:5: note: each undeclared identifier is reported only once for each function it appears in
vwmacc_vv_i32.c:49:44: error: incompatible type for argument 4 of 'vwmacc_vv_i32_golden'
   49 |     vwmacc_vv_i32_golden(exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                            ^~~~~~~~~
      |                                            |
      |                                            enum ACCUM
vwmacc_vv_i32.c:23:69: note: expected 'int64_t *' {aka 'long long int *'} but argument is of type 'enum ACCUM'
   23 | void vwmacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                            ~~~~~~~~~^~~~~~~~~~
vwmacc_vv_i32.c:49:5: error: too many arguments to function 'vwmacc_vv_i32_golden'
   49 |     vwmacc_vv_i32_golden(exp_a,exp_b,exp_c,exp_accum,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~
vwmacc_vv_i32.c:23:6: note: declared here
   23 | void vwmacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vwmacc_vv_i32.c:56:35: error: subscripted value is neither array nor pointer nor vector
   56 |         if(exp_result[i] != result[i]) {
      |                                   ^
vwmacc_vv_i32.c:57:79: error: subscripted value is neither array nor pointer nor vector
   57 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vwmacc_vv_i32.c:40:17: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   40 |     int64x8x2_t result = {0};
      |                 ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmacc_vv_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwmacc_vv_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwmacc_vv_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmacc_vv_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed